Apply suggestion from @marcoow

--- a/src/calendar/2025-11-02-rustlab.md
+++ b/src/calendar/2025-11-02-rustlab.md
@@ -2,7 +2,7 @@
 title: "RustLab"
 image: "/assets/images/calendar/2025-11-02-rustlab/rust.png"
 location: "Florence, Italy"
-url: https://rustlab.it/speakers/palmieri
+url: https://rustlab.it/talks/rust-python-interoperability
 kind: workshop and conference
 color: purple
 hero:
