--- a/src/calendar/2025-11-02-rustlab.md
+++ b/src/calendar/2025-11-02-rustlab.md
@@ -10,4 +10,4 @@ hero:
   imageAlt: "Panoramic sunset view of Florence, Italy, with the illuminated Duomo and city lights againts the backdrop of rolling hills"
 ---
 
-This year at RustLab, our Rust Consultant Luca Palmieri will lead a hands-on workshop on Rust-Python interoperability and deliver a talk "Dependency Injection in Rust: A Design Review". Don't miss this!
+This year at RustLab, our Rust expert Luca Palmieri will lead a hands-on workshop on Rust-Python interoperability and deliver a talk "Dependency Injection in Rust: A Design Review". Don't miss this!
