--- a/src/calendar/2025-09-16-oxidize.md
+++ b/src/calendar/2025-09-16-oxidize.md
@@ -4,7 +4,7 @@ image: "/assets/images/calendar/2025-09-16-oxidize/rust.png"
 location: "Berlin"
 url: https://oxidizeconf.com/
 kind: conference
-color: purple
+color: aqua
 hero:
   image: "/assets/images/calendar/2025-09-16-oxidize/Berlin.png"
   imageAlt: "Photo of Berlin captures the Fernsehturm (TV Tower) rising above modernist buildings and a fountain scene in the foreground"
