always use cookieless YT

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -26,7 +26,7 @@ Inspired by visual regression testing tools like [Percy](https://percy.io/) and 
 
 Here's a brief video of Gravity in action:
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2vD_geF_Ask" title="Gravity Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/2vD_geF_Ask" title="Gravity Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 Gravity consists of a set of core components:
 
