--- a/src/posts/2025-10-29-ai.md
+++ b/src/posts/2025-10-29-ai.md
@@ -7,7 +7,7 @@ description: "…"
 tagline: "<p>We’ve made it past the peak of the AI hype cycle. The days of the overblown claims, the panic, and endless thinkpieces in which authors are battling for who can make the boldest claims and thus look the most visionary are over – what we’re left with is more tangible, more boring, but also far more useful: the understanding that AI is a tool that enables real productivity improvements for software engineering teams.</p>"
 ---
 
-AI, if applied right, is helping teams work faster, better, and more confidently. And while nobody is able to exactly quantify the productivity gain – opinions vary widely between let's say 10% and 10x – the exact number doesn't matter anyway. Even the most defensive estimates result in numbers that must make everyone ask themselves: how can I realize that productivity gain for myself any my team?
+AI, if applied right, is helping teams work faster, better, and more confidently. And while nobody is able to exactly quantify the productivity gain – opinions vary widely between let's say 10% and 10x – the exact number doesn't matter anyway. Even the most defensive estimates result in numbers that must make everyone ask themselves: how can I realize that productivity gain for myself and my team?
 
 This shift creates peer-pressure as well. Once some teams can move significantly faster, it forces everyone else to catch up to not risk falling behind. An increased level of output for the same input becomes the new baseline, not the exception. That results in new tension as well. Many developers have concerns about code quality, environmental, ethical, or strategic aspects of AI. While those are legitimate concerns, opting out and not leveraging this new capability is asking a lot from any decision maker when the competition is moving ahead and happily increasing their output, and threatening to get ahead.
 
