--- a/src/posts/2025-10-29-ai.md
+++ b/src/posts/2025-10-29-ai.md
@@ -9,7 +9,7 @@ tagline: "<p>We’ve made it past the peak of the AI hype cycle. The days of the
 
 AI, if applied right, is helping teams work faster, better, and more confidently. And while nobody is able to exactly quantify the productivity gain – opinions vary widely between let's say 10% and 10x – the exact number doesn't matter anyway. Even the most defensive estimates result in numbers that must make everyone ask themselves: how can I realize that productivity gain for myself and my team?
 
-This shift creates peer-pressure as well. Once some teams can move significantly faster, it forces everyone else to catch up to not risk falling behind. An increased level of output for the same input becomes the new baseline, not the exception. That results in new tension as well. Many developers have concerns about code quality, environmental, ethical, or strategic aspects of AI. While those are legitimate concerns, opting out and not leveraging this new capability is asking a lot from any decision maker when the competition is moving ahead and happily increasing their output, and threatening to get ahead.
+This shift creates peer pressure as well. Once some teams can move significantly faster, it forces everyone else to catch up or risk falling behind. An increased level of output for the same input becomes the new baseline, not the exception. That results in new tension as well. Many developers have concerns about code quality, environmental, ethical, or strategic aspects of AI. While those are legitimate concerns, opting out and not leveraging this new capability is asking a lot from any decision maker when the competition is moving ahead and happily increasing their output, and threatening to get ahead.
 
 Yet, successfully leveraging AI in a software engineering context, in particular for mid to large teams and organizations, is not trivial. It’s not just getting everyone a ChatGPT license but a holistic shift in how a team operates. At the same time, there are few established best practices, and everyone is still figuring this out in real time.
 
