--- a/src/posts/2025-10-29-ai.md
+++ b/src/posts/2025-10-29-ai.md
@@ -25,7 +25,7 @@ In debugging and maintenance, AI is proving valuable as well. When systems misbe
 
 ### Risks and Challenges
 
-That said, it's not all fun and games. AI makes mistakes or hallucinates – often with a disturbing level of confidence. Mistakes range can range from made-up packages to architectural incoherence or inefficient implementations. This becomes especially problematic in large systems or mature teams, where consistency, clarity, and architecture matter – where someone might go all in on vibe-coding for their toy project they work on on the weekend, that approach has no place in professional software development. You don’t want a model pulling in bits and pieces of different patterns and practices it has seen across the internet and dropping them into your system. The result is neither reliable nor maintainable.
+That said, it's not all fun and games. AI makes mistakes or hallucinates – often with a disturbing level of confidence. Mistakes range from made-up packages to architectural incoherence or inefficient implementations. This becomes especially problematic in large systems or mature teams, where consistency, clarity, and architecture matter – where someone might go all in on vibe-coding for their toy project they work on on the weekend, that approach has no place in professional software development. You don’t want a model pulling in bits and pieces of different patterns and practices it has seen across the internet and dropping them into your system. The result is neither reliable nor maintainable.
 
 Avoiding that outcome requires strong guardrails. Providing AI tools the context and direction they need to be efficient is the essential first step. But human oversight is equally critical. Developers need to review AI output with the same or greater scrutiny they apply to human-written code. And they need new skills—prompting effectively, knowing where to trust the AI, and where to double-check. Without this human-in-the-loop approach, you really do risk ending up with exactly what the skeptics predict: an unmaintainable pile of garbage with eventually way out.
 
