--- a/src/posts/2025-10-29-ai.md
+++ b/src/posts/2025-10-29-ai.md
@@ -37,6 +37,8 @@ If code production is in fact accelerated successfully through AI, the surroundi
 
 All that shows that AI only increases the importance of what has always distinguished great engineering teams from the rest: a strong engineering culture and the infrastructure that's based on. The companies that will struggle with adopting AI will be the same ones that have struggled with quality, velocity, and consistency before AI. AI just increases the pressure – if practices are weak, systems brittle, reviews inconsistent, AI will expose and amplify that, making the teams that are already at a competitive disadvantage fall behind further.
 
+TODO: add sth. on investment pressure potentially leading to investment for the sake of it and instead of AI adding value just money being burned
+
 ### Our New AI Offering
 
 Mainmatter has helped clients build strong engineering cultures and infrastructures for many years. That work is more important than ever, now extended by an additional aspect: helping teams leverage AI for their engineering work in a way that actually accelerates their value creation sustainably.
